# Consensus-Crypto

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  settings.json
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: admin.py  auth.py  narratives.py
app/core/: config.py  logging.py  rate_limit.py  security.py
app/db/: init_db.py  session.py
app/db/migrations/: .keep
app/lexicon/: narratives.yaml
app/models/: api_key.py  base.py  document.py  kpi.py  user.py
app/pipelines/: ingest_and_score.py
app/schemas/: auth.py  common.py  narrative.py
app/services/ingest/: coingecko_client.py  cryptopanic_client.py  x_client.py
app/services/kpi/: adapters.py
app/services/nlp/: matching.py  sentiment.py
app/services/scoring/: strength.py
tests/fixtures/: cryptopanic_sample.json  x_sample.json
tests/integration/: test_api_endpoints.py  test_ingest_pipeline.py
tests/unit/: test_auth.py  test_matching.py  test_sentiment.py  test_strength.py
